# wechatbot

./: .gitignore  1.txt  AGENTS.md  CLAUDE.md  README.md  _diag3.py  all.md  checkin.js  daily-2026-06-29.md  daily-2026-06-30.md  daily-2026-07-01.md  daily-2026-07-02.md  daily-2026-07-03.md  daily-2026-07-06.md  daily-2026-07-09.md  daily-2026-07-13.md  daily-2026-07-14.md  daily-2026-07-15.md  daily-2026-07-16.md  daily-2026-07-17.md  daily-2026-07-19.md  daily-2026-07-20.md  daily-2026-07-21.md  furry_api_result.json  lolicon_api_result.json  sub2api_current_1.json
OHfcyqSq8pTvgZFce9SkcZvqcVpQE_ce/: account_password_mailbox.txt
OHfcyqSq8pTvgZFce9SkcZvqcVpQE_ce/cpa/: token_kaiserjared7787+_outlook.com_1783561918_0.json
OHfcyqSq8pTvgZFce9SkcZvqcVpQE_ce/sub2api/: sub2api_1.json
Py/: .gitignore  main.py  main.py.v12.bak  wechat_user_aliases.json
Py/test/: test_forward_record_parser.py  test_group_member_notice.py  (+2 more)
ai_plugin/: .gitignore  checkin.py
ai_plugin/legacy_nonebot2/: README.md  bot.py  nonebot2.toml  pyproject.toml
ai_plugin/legacy_nonebot2/ai_plugin/: __init__.py  handler.py  hermes_client.py  mcp_history.py  mcp_tools.py  router.py  tools.py
context/: output-config.md
docs/: 2026-04-22-bugfix-log.md
nonebot-plugin-mystool/: CHANGELOG.md  pyproject.toml
nonebot-plugin-repeater/: pyproject.toml
scripts/: ensure_12123_tunnel_task.ps1  ensure_12123_tunnel_task_hidden.vbs  register_12123_tunnel_task.ps1  register_12123_tunnel_watchdog.ps1  start-ncm-api.ps1  start_12123_reverse_tunnel.ps1  start_12123_reverse_tunnel_hidden.vbs
(+386 files in other folders)
