[project]
name = "ai_plugin"
version = "0.1.0"
description = "AI Chat Plugin for NoneBot"
requires-python = ">=3.11,<3.12"
dependencies = [
    "nonebot2[fastapi]>=2.5.0,<3.0.0",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "nonebot-plugin-apscheduler>=0.5.0,<0.6.0",
    "nonebot-plugin-send-anything-anywhere>=0.7.0,<0.8.0",
    "nonebot-adapter-qq>=1.6.0,<2.0.0",
    "fastapi>=0.136.0,<0.137.0",
    "pydantic>=2.13.0,<3.0.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "uvicorn[standard]>=0.45.0,<0.46.0",
    "httpx>=0.27.0,<0.28.0",
    "numpy>=2.0.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.2.0,<2.0.0",
    "Pillow>=11.0.0,<12.0.0",
    "qrcode>=8.0.0,<9.0.0",
    "ntplib>=0.4.0,<0.5.0",
    "pytz>=2024.0,<2025.0",
    "websockets>=15.0",
    "PyYAML>=6.0,<7.0",
    "pycryptodomex>=3.20.0",
    "gmssl>=3.2.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "browser-cookie3>=0.19.0",
    "importlib-resources>=5.0.0",
    "ua-parser>=0.18.0",
    "user-agents>=2.2.0",
    "jinja2>=3.0.0",
    "playwright>=1.40.0",
    "edge-tts>=7.0.0",
    "pilk>=0.2.4",
]

[tool.nonebot]
plugins = ["ai_plugin", "nonebot_plugin_mystool", "nonebot_plugin_tarot", "nonebot_plugin_setu_collection", "nonebot_plugin_repeater", "nonebot_plugin_rocom"]

[tool.nonebot.driver]
type = "nonebot.drivers.fastapi"
